# ShadowGen-ML-training

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: project.yaml
docs/: artifact-policy.md  dataset.md  repo-scope.md
docs/contracts/: shadow-v2-model-contract.md
docs/decisions/: data-versioning.md  model-direction.md  open-questions.md  shadow-prior-strategy.md  training-stack.md
docs/discussions/: 2026-04-21-model-selection-chatgpt-share.md  2026-04-21-training-pipeline-chatgpt-share.md
docs/runbooks/: local-setup.md  next-model-step.md  toy-baseline.md
manifests/: shadow_pair_v1.summary.json
src/shadowgen_training/: __init__.py  cli.py
src/shadowgen_training/data/: __init__.py  shadow_pair_manifest.py
src/shadowgen_training/toy/: __init__.py  pixel_baseline.py
tests/: test_cli.py  test_config.py  test_manifest.py
